Make sure code doesn't break in notices

--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -423,6 +423,7 @@ body {
 
     code {
       background-color: rgba(232, 232, 232, 0.4);
+      word-break: break-word;
     }
 
     a {
